infra/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tekton-triggers
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
  - host: kyohmizu.com
    http:
      paths:
      - path: /event-listener
        backend:
          serviceName: el-github-listener
          servicePort: 8080
  tls:
  - hosts:
    - kyohmizu.com
    secretName: tekton-triggers-tls
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myportfolio
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
  - host: kyohmizu.com
    http:
      paths:
      - path: /
        backend:
          serviceName: myportfolio
          servicePort: 80
  tls:
  - hosts:
    - kyohmizu.com
    secretName: myportfolio-tls
